--- a/_data/atlanta-police-department.yml
+++ b/_data/atlanta-police-department.yml
@@ -2,9 +2,9 @@
   group-description:
   charts:
     - title: Change in crime across City of Atlanta
-      summary: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed across the City of Atlanta
-      description: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
-      note: This data is published by the Federal Bureau of Investigation
+      summary: The FBI collects information on major crimes from agencies across the United States and the Atlanta Police Department is no exception. The YTD change in total major crimes from the year before (blue) reported by the Atlanta Police Department (APD) is shown below. 
+      description: Atlanta saw very respectable reductions in crime in 2012 and 2013 (-7% and -4%), and in 2014 crime is on pace to be reduced 10% compared to the previous year as of May 2014. The City is on track to meet its target of a 20% reduction in crime from the start of the Mayor's term to the end of his term.
+	  note:  Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: APD
       datasource: overall_crime
@@ -15,9 +15,9 @@
       series1-label: Year Over Year Change
 
     - title: Change in crime By Police Zone
-      summary: Total Year-Over-Year change in the number of Uniform Crime Rate (UCR) Crimes committed within each of the City's Police zones
-      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
-      note: This data is published by the Federal Bureau of Investigation
+      summary: APD organizes its field division into 6 administrative zones.  APD actively monitors changes and compares crime across these different zones as part of its improvement efforts.  The YTD change in major crimes compared to the year before for each zone is shown below. 
+      description: Currently in 2014, all 6 zones are reporting a reduction in crime compared to the year before. This achievement was not seen in 2013. 
+      note: Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: APD
       datasource: crime_by_zone
@@ -33,8 +33,9 @@
   group-description:
   charts:
     - title: Total Dispatched Calls and Call Answering Performance
-      summary: Total number of calls dispatched by the E911 call center every month (left) as well as the percentage of calls that the Center is able to answer in 10 seconds or less (right). 
-      description: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
+      summary: The City of Atlanta e911 center handles all the emergency calls within city limits. Many of the calls require the dispatching of police services (blue bar chart). The center prides itself on being able to answer emergency calls as quickly as possible and actively measures the percent of calls it answers within 10 seconds (red) per industry standards.
+	  description: The City’s e911 center has achieved a 10 second or less answer time on all emergency calls 90% of the time or greater for the last 3 years. This industry standard shows e911’s committed use of technology, efficiency and staffing to meet the emergency needs of citizens. 
+      note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: APD
       datasource: e911_call_center
